# Wealth-Advisor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: agent.py  llm.py  main.py  models.py  router.py  session.py  tools.py
backend/app/agent/: __init__.py  graph.py  llm.py  nodes.py  state.py  tools.py
backend/app/agent/tools/: __init__.py  models.py  tools.py
backend/app/core/: config.py  logger.py  middleware.py
backend/app/data/: prompts.json
backend/app/middleware/: __init__.py  guardrails.py
backend/app/models/: __init__.py  chat.py
backend/app/router/: guardrails.py  router.py  sessions.py
backend/app/routers/: __init__.py
backend/app/routers/v1/: __init__.py  llm.py
frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: advisor.ts  chat.ts
frontend/src/components/: AdvisorForm.jsx  ChatInput.jsx  ChatWindow.jsx  ClarificationCard.jsx  FormattedMessage.jsx  MessageBubble.jsx  ResultCard.jsx  Sidebar.jsx  ToolApprovalCard.jsx
frontend/src/components/chat/: ChatInput.jsx  ChatWindow.jsx  FormattedMessage.jsx  LoadingSpinner.jsx  MessageBubble.jsx  ToolApprovalCard.jsx  ToolCallBadge.jsx  ToolCallMessage.jsx  WelcomeScreen.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/layouts/: AppLayout.jsx
frontend/src/pages/: ChatPage.jsx
frontend/src/types/: advisor.ts  chat.ts
(+4 files in other folders)
