[project]
name = "wealth-advisor-backend"
version = "0.1.0"
description = "Wealth Advisor Chatbot - FastAPI Backend with LangGraph agent and MCP tools"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx",
    "python-dotenv",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
